Configure Azure App Service deployment: add GitHub Actions workflow, web.config for iisnode, update package.json engines, clean .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,23 @@
 node_modules/
 .env
-*.json
-!package.json
-!package-lock.json
 *.log
 testConn.js
 insert_result.json
 .claude/
 .gemini/
+iisnode/
+_diag_*.js
+_check_*.js
+_debug_*.js
+_inspect_*.js
+_map_*.js
+_reset_*.js
+_list_*.js
+diag_output.txt
+diag_dup_output.txt
+_diag_final_out.txt
+fields_all.txt
+fields_utf8.txt
+sync_log_full.json
+recent_activity.json
+nul
